<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlyt_passwd_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlyt_title"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="1px"
                android:background="@mipmap/common_edit_text_top">

                <TextView
                    android:id="@+id/tv_title_label"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_light_light"
                    android:text="标题:"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="15dp"
                    android:layout_toRightOf="@+id/tv_title_label"
                    android:background="@null"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/black_light_light"
                    android:textColorHint="@color/black_light_light"
                    android:hint="如：Kindle/Apple/Baidu"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlyt_username"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="1px"
                android:background="@mipmap/common_edit_text_middle">

                <TextView
                    android:id="@+id/tv_username_label"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_light_light"
                    android:text="用户名:"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="15dp"
                    android:layout_toRightOf="@+id/tv_username_label"
                    android:background="@null"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/black_light_light"
                    android:textColorHint="@color/black_light_light"
                    android:hint="如：wanhex"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlyt_passwd"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="1px"
                android:background="@mipmap/common_edit_text_middle">

                <TextView
                    android:id="@+id/tv_passwd_label"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_light_light"
                    android:text="密码:"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_passwd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="13dp"
                    android:layout_toLeftOf="@+id/ib_random_btn"
                    android:layout_toRightOf="@+id/tv_passwd_label"
                    android:background="@null"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/black_light_light"
                    android:textColorHint="@color/black_light_light"
                    android:hint="如：ueadfp445sdgh*^"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/ib_random_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:src="@drawable/selector_random_btn"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlyt_comments"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="1px"
                android:background="@mipmap/common_edit_text_bottom">

                <TextView
                    android:id="@+id/tv_comments_label"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_light_light"
                    android:text="备注:"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="15dp"
                    android:layout_toRightOf="@+id/tv_comments_label"
                    android:background="@null"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/black_light_light"
                    android:textColorHint="@color/black_light_light"
                    android:hint="其他"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
