<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/save_password"
        android:icon="@mipmap/insert_done"
        android:title="保存"
        app:showAsAction="always" />
</menu>