<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_password"
        android:icon="@drawable/ic_action_add"
        android:title="新增密码"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="设置"
        app:showAsAction="always" />
</menu>